[gd_scene load_steps=3 format=3 uid="uid://b11mxt13fld43"]

[ext_resource type="Script" path="res://traps/Projectiles/Projectile1.gd" id="1_vjtl5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_011ms"]

[node name="Area2D" type="Area2D"]
script = ExtResource("1_vjtl5")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_011ms")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Duration" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Duration" to="." method="_on_duration_timeout"]
